<resources>
    <string name="app_name">Ecomm</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account? <u>Register</u></string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Already have an account? <u>Login</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="cm_password">Confirm Password</string>
    <string name="phone">Phone</string>
</resources>